--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@ Ejercicio Ciclo 4
 <a href="Ejercicio1.html">Imagen 1</a><br>
 <a href="Ejercicio2.html">Imagen 2</a><br>
 <a href="Ejercicio3.html">Imagen 3</a><br>
+<a href="Cuestionario.html">Cuestionario</a><br>
 </body>
+
 </html>
