--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@ Ejercicio Ciclo 4
 <a href="Ejercicio2.html">Imagen 2</a><br>
 <a href="Ejercicio3.html">Imagen 3</a><br>
 <a href="Cuestionario.html">Cuestionario</a><br>
-<a href="Cuestionario2.html">Cuestionario2</a><br>
+<a href="ciclo6.html">ciclo6.html</a><br>
 </body>
 
 </html>
+
 
