--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Ejercicio Ciclo 4
 <body>
 <h1>Imagenes</h1>
 
-<a href="Ejercicio1.html">Imagen 1</a><br>
+<a href="ejercicio1.html">Imagen 1</a><br>
 <a href="Ejercicio2.html">Imagen 2</a><br>
 <a href="Ejercicio3.html">Imagen 3</a><br>
 <a href="Cuestionario.html">Cuestionario</a><br>
@@ -17,5 +17,6 @@ Ejercicio Ciclo 4
 </body>
 
 </html>
+
 
 
