--- a/Evaluacion.html
+++ b/Evaluacion.html
@@ -24,7 +24,7 @@
 	
 	
 		</td>
-		<td><audio src="HimnoColombia.mp3" controls></audio>media		
-		<td> <img src="" alt="escudo.png"/> </td>
+		<td><audio src="HimnoColombia.mp3" controls></audio>		
+		<td> <img src="escudo.png" alt="escudo"/> </td>
 	</tr>
 </table>
