--- a/Evaluacion.html
+++ b/Evaluacion.html
@@ -25,6 +25,6 @@
 	
 		</td>
 		<td><audio src="HimnoColombia.mp3" controls></audio>		
-		<td> <img src="escudo.png" alt="escudo" width="200" height="200"> </td>
+		<td> <img src="escudo.png" alt="escudo" width=200 height=200> </td>
 	</tr>
 </table>
